Tue Dec  2 06:30:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (rb_reg_region_copy): new function to try with GC if copy
	  failed and return the error.

Tue Dec  2 04:43:08 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* re.c (CHECK_REGION_COPIED): onig_region_copy() can fail when
	  memory exhausted but returns nothing, so check by if allocated.

Tue Dec  2 02:53:00 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (magic_comment_encoding): enable in ripper, since the
	  encoding is necessary to parse non-default encoding scripts.

Tue Dec  2 02:30:25 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic.build):
	  use hostname= to detect and wrap IPv6 hosts.
	  Build is accepting URI components and users may not expect
	  that a host component needs to be wrapped with square brackets
	  since it's not providing a URI.
	  Note: initialize with arg_check => true does not wrap IPv6 hosts.
	  by Joe Rafaniello <jrafanie@redhat.com>
	  https://github.com/ruby/ruby/pull/765 fix GH-765

	* test/uri/test_generic.rb: Add more tests

Mon Dec  1 20:01:12 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c: use typed data for WIN32OLE.
	* ext/win32ole/win32ole.h: ditto.
	* ext/win32ole/win32ole_event.c: ditto.

Mon Dec  1 17:20:42 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/Makefile.sub (verconf.h): so depends on verconf.mk, which
	  is rebuilt by setup.mak.

Mon Dec  1 11:05:46 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* proc.c: fix grammar by @BenMorganIO [fix GH-764][ci skip]

Mon Dec  1 10:49:53 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* man/rake.1: Update latest man content by @aledovsky
	  [fix GH-771][ci skip]

Mon Dec  1 10:42:31 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* doc/syntax/refinements.rdoc: refinements are no longer experimental.
	  patch by @gaurish [fix GH-775][ci skip]

Sun Nov 30 20:05:55 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>
